tests/parser/valid/declarations/test_global_var.src
int global = 42;

fn main() -> void {
    int x = global;
    return;
}