tests/parser/invalid/syntax_errors/test_missing_brace.src
fn main() -> void {
    int x = 42;